--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-fetch": "^3.3.2",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
