--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "lightweight-charts": "^4.2.2",
     "next": "15.0.3",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1"
   },
   "devDependencies": {
