--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/dashboard/Withdrawals/page.jsx", "src/app/dashboard/page.jsx", "src/app/dashboard/credits/page.jsx", "src/app/components/CreditsCard.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/dashboard/Withdrawals/page.jsx", "src/app/dashboard/page.jsx", "src/app/dashboard/credits/page.jsx", "src/app/components/CreditsCard.jsx", "src/app/utils/DateAndTime.js"],
   "exclude": ["node_modules"]
 }
